<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/darker_gray">

    <ImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/back"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        tools:ignore="ContentDescription"
        android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_activation"
            android:layout_toRightOf="@+id/back"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/back"
            android:layout_marginStart="20dp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rl1"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:id="@+id/ll1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_september_2020"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_expired"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:gravity="center"
            />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginTop="50dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/black_circle"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/circle" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/phone"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/phone_off" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nexus_5_insurance"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:layout_below="@id/fl1"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_insurance_now"
        android:textStyle="bold"
        android:textSize="21sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:layout_above="@+id/tv3"
        android:layout_below="@id/tv2"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:background="#c4c4c4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lge_nexus_5"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insurance_term"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_months"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coverage"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_above="@+id/tv4"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray"
        android:text="@string/all_drops_and_breakage_including_cracked_screen"
        android:textSize="20sp"
        android:padding="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

</RelativeLayout>
